Update pages and links

--- a/contact.html
+++ b/contact.html
@@ -535,9 +535,9 @@
 
     <!-- Social Links -->
     <div class="social-links">
-  <a href="#" class="social-link" title="LinkedIn"><span>in</span></a>
-  <a href="https://www.instagram.com/voya.adventure" class="social-link" title="Facebook" target="_blank" rel="noopener noreferrer"><span>f</span></a>
-  <a href="https://www.facebook.com/share/1CMa5KyQNL" class="social-link" title="Instagram" target="_blank" rel="noopener noreferrer"><span>📷</span></a>
+  <a href="https://www.linkedin.com/company/voya-adventure" class="social-link" title="LinkedIn" target="_blank" rel="noopener noreferrer"><span>in</span></a>
+  <a href="https://www.instagram.com/voya.adventure" class="social-link" title="Instagram" target="_blank" rel="noopener noreferrer"><span>f</span></a>
+  <a href="https://www.facebook.com/share/1CMa5KyQNL" class="social-link" title="Facebook" target="_blank" rel="noopener noreferrer"><span>4f7</span></a>
     </div>
 
     <!-- Contact Information Section -->
@@ -567,7 +567,7 @@
                 <div class="contact-section-title">Phone Number</div>
                 <div class="contact-info"><a href="tel:+919123456789">+91 91234 56789</a></div>
                 <div class="contact-section-title">Download Press Kit</div>
-                <div class="contact-info"><a href="#" style="color: #00bcd4; text-decoration: underline;">Download Press Kit</a></div>
+                <div class="contact-info"><a href="d4.docx" style="color: #00bcd4; text-decoration: underline;">Download Press Kit</a></div>
             </div>
         </div>
     </section>
