--- a/experience.html
+++ b/experience.html
@@ -607,7 +607,7 @@
                             <li>Expert local guides & safety support</li>
                             <li>Monastery visits & cultural immersion</li>
                         </ul>
-                        <a href="#" class="explore-button">EXPLORE TREKKING</a>
+                        <a href="experience.html#trekking" class="explore-button">EXPLORE TREKKING</a>
                     </div>
                 </div>
 
@@ -630,7 +630,7 @@
                             <li>Sunset viewpoints & beach picnics</li>
                             <li>Luxury accommodations & personalized service</li>
                         </ul>
-                        <a href="#" class="explore-button">EXPLORE ROMANCE</a>
+                        <a href="experience.html#romance" class="explore-button">EXPLORE ROMANCE</a>
                     </div>
                 </div>
 
@@ -653,7 +653,7 @@
                             <li>All-inclusive package</li>
                             <li>Unforgettable memories</li>
                         </ul>
-                        <a href="#" class="explore-button">BOOK MYSTERY</a>
+                        <a href="experience.html#mystery" class="explore-button">BOOK MYSTERY</a>
                     </div>
                 </div>
 
@@ -676,7 +676,7 @@
                             <li>Royal heritage stays & palace tours</li>
                             <li>Local market discoveries & cooking classes</li>
                         </ul>
-                        <a href="#" class="explore-button">EXPLORE CULTURE</a>
+                        <a href="experience.html#culture" class="explore-button">EXPLORE CULTURE</a>
                     </div>
                 </div>
 
@@ -699,7 +699,7 @@
                             <li>Tea tasting with garden masters</li>
                             <li>Spiritual ceremonies & blessing rituals</li>
                         </ul>
-                        <a href="#" class="explore-button">EXPLORE TEA & TEMPLES</a>
+                        <a href="experience.html#tea-temples" class="explore-button">EXPLORE TEA & TEMPLES</a>
                     </div>
                 </div>
 
@@ -722,7 +722,7 @@
                             <li>Bird watching & nature photography</li>
                             <li>Tribal village visits & forest walks</li>
                         </ul>
-                        <a href="#" class="explore-button">EXPLORE JUNGLE</a>
+                        <a href="experience.html#jungle" class="explore-button">EXPLORE JUNGLE</a>
                     </div>
                 </div>
 
