--- a/form.html
+++ b/form.html
@@ -60,14 +60,12 @@
     
     <div id="mobile-menu" class="hidden bg-black bg-opacity-90 py-4 px-4">
       <div style="display:flex;flex-direction:column;gap:0;">
-        <a href="index.html" class="nav-item" role="menuitem" style="padding:1rem 0 1rem 0.5rem;border-bottom:1px solid rgba(255,255,255,0.13);color:#fff;">Home</a>
-        <a href="Aboutus.html" class="nav-item" role="menuitem" style="padding:1rem 0 1rem 0.5rem;border-bottom:1px solid rgba(255,255,255,0.13);color:#fff;">About Us</a>
-        <div class="nav-item nav-experiences-group" style="position:relative;padding:1rem 0 1rem 0.5rem;border-bottom:1px solid rgba(255,255,255,0.13);color:#fff;">
-          <a href="experience.html" class="nav-item experiences-title-link" role="menuitem" aria-label="Explore Experiences page" style="margin-bottom:0;color:#fff;">Our Experiences</a>
-        </div>
+        <a href="form.html" class="nav-item" role="menuitem" style="padding:1rem 0 1rem 0.5rem;border-bottom:1px solid rgba(255,255,255,0.13);color:#fff;">Begin Your Journey</a>
         <a href="Reviews.html" class="nav-item" role="menuitem" style="padding:1rem 0 1rem 0.5rem;border-bottom:1px solid rgba(255,255,255,0.13);color:#fff;">Testimonials</a>
-        <a href="#how-it-works" class="nav-item" role="menuitem" style="padding:1rem 0 1rem 0.5rem;border-bottom:1px solid rgba(255,255,255,0.13);color:#fff;">How It Works</a>
+        <a href="experience.html" class="nav-item experiences-title-link" role="menuitem" aria-label="Explore Experiences page" style="margin-bottom:0;color:#fff;">Our Experiences</a>
+        <a href="Aboutus.html" class="nav-item" role="menuitem" style="padding:1rem 0 1rem 0.5rem;color:#fff;">About Us</a>
         <a href="contact.html" class="nav-item" role="menuitem" style="padding:1rem 0 1rem 0.5rem;color:#fff;">Contact Us</a>
+        <a href="index.html" class="nav-item" role="menuitem" style="padding:1rem 0 1rem 0.5rem;color:#fff;">Home</a>
       </div>
     </div>
   </nav>
