--- a/Aboutus.html
+++ b/Aboutus.html
@@ -347,12 +347,20 @@
                 <div class="founder-name">Nishant Ingle </div>
                 <div class="founder-role">Co-Founder</div>
                 <p class="founder-description">Nishant is passionate about creating unique travel experiences and loves discovering offbeat destinations.</p>
+                <a href="https://www.linkedin.com/in/nishant-ingle-b0a591252/" class="linkedin-btn" id="linkedin-founder1" target="_blank" rel="noopener noreferrer" style="display:inline-block;margin-top:10px;padding:8px 18px;background:#0077b5;color:#fff;border-radius:6px;font-weight:500;font-family:'Inter',sans-serif;text-decoration:none;box-shadow:0 2px 8px rgba(0,119,181,0.13);transition:background 0.3s;">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor" style="vertical-align:middle;margin-right:8px;"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-10h3v10zm-1.5-11.268c-.966 0-1.75-.784-1.75-1.75s.784-1.75 1.75-1.75 1.75.784 1.75 1.75-.784 1.75-1.75 1.75zm13.5 11.268h-3v-5.604c0-1.337-.026-3.063-1.868-3.063-1.868 0-2.154 1.459-2.154 2.967v5.7h-3v-10h2.881v1.367h.041c.401-.761 1.379-1.563 2.838-1.563 3.036 0 3.6 2.001 3.6 4.601v5.595z"/></svg>
+                  LinkedIn
+                </a>
             </div>
             <div class="founder-card">
                 <img src="founder2.png" alt="Founder 2" class="founder-img">
                 <div class="founder-name">Aryan Sethia </div>
                 <div class="founder-role">Co-Founder</div>
                 <p class="founder-description">Aryan ensures every trip runs smoothly and loves creating surprise elements for travelers.</p>
+                <a href="https://www.linkedin.com/in/aryan-sethia-787a81249" class="linkedin-btn" id="linkedin-founder2" target="_blank" rel="noopener noreferrer" style="display:inline-block;margin-top:10px;padding:8px 18px;background:#0077b5;color:#fff;border-radius:6px;font-weight:500;font-family:'Inter',sans-serif;text-decoration:none;box-shadow:0 2px 8px rgba(0,119,181,0.13);transition:background 0.3s;">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor" style="vertical-align:middle;margin-right:8px;"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-10h3v10zm-1.5-11.268c-.966 0-1.75-.784-1.75-1.75s.784-1.75 1.75-1.75 1.75.784 1.75 1.75-.784 1.75-1.75 1.75zm13.5 11.268h-3v-5.604c0-1.337-.026-3.063-1.868-3.063-1.868 0-2.154 1.459-2.154 2.967v5.7h-3v-10h2.881v1.367h.041c.401-.761 1.379-1.563 2.838-1.563 3.036 0 3.6 2.001 3.6 4.601v5.595z"/></svg>
+                  LinkedIn
+                </a>
             </div>
             <div class="founder-card">
     <script>
@@ -369,6 +377,10 @@
                 <div class="founder-name">Keshav Sahu</div>
                 <div class="founder-role">Co-Founder</div>
                 <p class="founder-description">Keshav connects VOYA with travelers and is committed to building lasting relationships.</p>
+                <a href="https://www.linkedin.com/in/keshav-sahu-17ba342a2" class="linkedin-btn" id="linkedin-founder3" target="_blank" rel="noopener noreferrer" style="display:inline-block;margin-top:10px;padding:8px 18px;background:#0077b5;color:#fff;border-radius:6px;font-weight:500;font-family:'Inter',sans-serif;text-decoration:none;box-shadow:0 2px 8px rgba(0,119,181,0.13);transition:background 0.3s;">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor" style="vertical-align:middle;margin-right:8px;"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-10h3v10zm-1.5-11.268c-.966 0-1.75-.784-1.75-1.75s.784-1.75 1.75-1.75 1.75.784 1.75 1.75-.784 1.75-1.75 1.75zm13.5 11.268h-3v-5.604c0-1.337-.026-3.063-1.868-3.063-1.868 0-2.154 1.459-2.154 2.967v5.7h-3v-10h2.881v1.367h.041c.401-.761 1.379-1.563 2.838-1.563 3.036 0 3.6 2.001 3.6 4.601v5.595z"/></svg>
+                  LinkedIn
+                </a>
             </div>
         </div>
     </section>
