improved best practices

--- a/Aboutus.html
+++ b/Aboutus.html
@@ -184,7 +184,7 @@
         }
         .footer-section ul a:hover { color: #fff; }
         .contact-info li {
-            display: flex; align-items: center; gap: 0.8rem; color: #aaa; font-size: 0.9rem;
+            display: flex; align-items: center; gap: 0.8rem; color: #aaa; font
         }
         .contact-info svg { flex-shrink: 0; }
         .newsletter-form { display: flex; gap: 0.5rem; }
@@ -292,6 +292,7 @@
             }
         }
     </style>
+    <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
 </head>
 <body>
     <!-- Navigation Bar -->
