--- a/Reviews.html
+++ b/Reviews.html
@@ -389,6 +389,7 @@
           }
         }
     </style>
+    <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
 </head>
 <body>
 
