--- a/experience.html
+++ b/experience.html
@@ -541,6 +541,7 @@
           }
         }
     </style>
+    <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
 </head>
 <body>
     <!-- Header Navigation -->
