--- a/form.html
+++ b/form.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VOYA India - Secret Journeys</title>
   <meta name="description" content="Book your free consultation with VOYA. Fill out our quick enquiry form to start your personalized mystery journey across India.">
+  <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&family=Cormorant+Garamond:wght@300;400;500&display=swap" rel="stylesheet">
   <style>
