--- a/index.html
+++ b/index.html
@@ -642,7 +642,6 @@
         box-shadow: none;
         border: none;
         clip-path: none;
-        overflow: visible;
     }
     .testimonial-card blockquote {
   font-family: 'Cormorant Garamond', serif;
@@ -842,6 +841,7 @@
       outline-offset: 2px;
     }
   </style>
+  <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
 </head>
 <body>
   <div class="loading" id="loading">
