--- a/Aboutus.html
+++ b/Aboutus.html
@@ -184,7 +184,7 @@
         }
         .footer-section ul a:hover { color: #fff; }
         .contact-info li {
-            display: flex; align-items: center; gap: 0.8rem; color: #aaa; font
+            display: flex; align-items: center; gap: 0.8rem; color: #aaa; font-size: 0.9rem;
         }
         .contact-info svg { flex-shrink: 0; }
         .newsletter-form { display: flex; gap: 0.5rem; }
