make a lot of changes everywhere

--- a/experience.html
+++ b/experience.html
@@ -7,6 +7,7 @@
     <title>Our Experiences - VOYA</title>
     <meta name="description" content="Explore VOYA's curated mystery adventures. Discover India's hidden treasures through unique travel experiences and secret journeys.">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <style>
         * {
             margin: 0;
