--- a/Aboutus.html
+++ b/Aboutus.html
@@ -7,6 +7,7 @@
     <title>About Us - VOYA</title>
     <meta name="description" content="Learn about VOYA, our founders, and our mission to create unforgettable mystery travel experiences across India.">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&family=Cormorant+Garamond:wght@300;400;500&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <style>
         /* Animation for founder cards */
         @keyframes fadeInUp {
