--- a/Reviews.html
+++ b/Reviews.html
@@ -7,6 +7,7 @@
     <title>Stories - VOYA Secret Journeys</title>
     <meta name="description" content="Read real stories and testimonials from travelers who experienced VOYA's secret journeys across India.">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <style>
         /* General Setup */
         *, *::before, *::after {
