--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Contact Us - VOYA</title>
     <meta name="description" content="Contact VOYA for inquiries, support, and partnership opportunities. We're here to help you plan your next secret journey.">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
     <style>
         * {
