--- a/form.html
+++ b/form.html
@@ -9,6 +9,7 @@
   <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&family=Cormorant+Garamond:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <style>
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
@@ -107,28 +108,31 @@
           </p>
           
           <form id="travel-form" class="space-y-6">
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-            <!-- Honeypot (hidden from users, visible to bots) -->
-            <input type="text" name="hp_field" id="hp_field" style="display:none" autocomplete="off" tabindex="-1">
+              <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+              <!-- Honeypot (hidden from users, visible to bots) -->
+              <input type="text" name="hp_field" id="hp_field" style="display:none" autocomplete="off" tabindex="-1">
+              <div id="form-errors" aria-live="assertive" style="color:#b91c1c;font-size:1rem;margin-bottom:1rem;display:none;"></div>
               <div>
-                <label for="firstName" class="block text-sm font-medium text-gray-700">First name* <span class="sr-only">Enter your first name</span></label>
+                <label for="firstName" class="block text-sm font-medium text-gray-700">First name* </label>
                 <input
                   type="text"
                   id="firstName"
                   name="firstName"
                   required
+                  aria-required="true"
                   aria-label="First name"
                   autocomplete="given-name"
                   class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 p-2 border"
                 />
               </div>
               <div>
-                <label for="lastName" class="block text-sm font-medium text-gray-700">Last name* <span class="sr-only">Enter your last name</span></label>
+                <label for="lastName" class="block text-sm font-medium text-gray-700">Last name* </label>
                 <input
                   type="text"
                   id="lastName"
                   name="lastName"
                   required
+                  aria-required="true"
                   aria-label="Last name"
                   autocomplete="family-name"
                   class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 p-2 border"
@@ -138,24 +142,26 @@
 
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
               <div>
-                <label for="email" class="block text-sm font-medium text-gray-700">Email* <span class="sr-only">Enter your email address</span></label>
+                <label for="email" class="block text-sm font-medium text-gray-700">Email* </label>
                 <input
                   type="email"
                   id="email"
                   name="email"
                   required
+                  aria-required="true"
                   aria-label="Email address"
                   autocomplete="email"
                   class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 p-2 border"
                 />
               </div>
               <div>
-                <label for="phone" class="block text-sm font-medium text-gray-700">Phone* <span class="sr-only">Enter your phone number</span></label>
+                <label for="phone" class="block text-sm font-medium text-gray-700">Phone* </label>
                 <input
                   type="tel"
                   id="phone"
                   name="phone"
                   required
+                  aria-required="true"
                   aria-label="Phone number"
                   autocomplete="tel"
                   class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 p-2 border"
@@ -344,12 +350,13 @@
         <div class="footer-section">
           <h4>Newsletter</h4>
           <p>Subscribe to receive updates about new destinations and special offers.</p>
-          <form id="newsletter-form" class="newsletter-form" action="#" method="POST" style="display:flex;gap:8px;flex-wrap:wrap;align-items:center;">
-            <input type="email" id="newsletterEmail" name="newsletterEmail" placeholder="Enter your email" required style="padding:8px 12px;border-radius:6px;border:1px solid #ccc;min-width:220px;">
+          <form id="newsletter-form" class="newsletter-form" action="#" method="POST" aria-label="Newsletter subscription form" style="display:flex;gap:8px;flex-wrap:wrap;align-items:center;">
+            <label for="newsletterEmail" class="sr-only">Email address</label>
+            <input type="email" id="newsletterEmail" name="newsletterEmail" placeholder="Enter your email" required aria-required="true" aria-label="Email address" style="padding:8px 12px;border-radius:6px;border:1px solid #ccc;min-width:220px;">
             <input type="text" id="newsletter-hp" name="hp_field" style="display:none" autocomplete="off" tabindex="-1">
             <button type="submit" id="newsletter-submit" style="background:#005fa3;color:#fff;padding:8px 20px;border:none;border-radius:6px;font-weight:600;cursor:pointer;">Subscribe</button>
           </form>
-          <div id="newsletter-msg" style="margin-top:8px;font-size:0.95rem;display:none;"></div>
+          <div id="newsletter-msg" style="margin-top:8px;font-size:0.95rem;display:none;" aria-live="polite"></div>
         </div>
       </div>
       <div class="footer-bottom">
@@ -500,6 +507,55 @@
     }
   </style>
   <script>
+    // Accessibility and validation for travel form
+    document.addEventListener('DOMContentLoaded', function () {
+      const travelForm = document.getElementById('travel-form');
+      if (travelForm) {
+        travelForm.addEventListener('submit', function (e) {
+          let errors = [];
+          const firstName = travelForm.querySelector('#firstName');
+          const lastName = travelForm.querySelector('#lastName');
+          const email = travelForm.querySelector('#email');
+          const phone = travelForm.querySelector('#phone');
+          if (!firstName.value.trim()) errors.push('First name is required.');
+          if (!lastName.value.trim()) errors.push('Last name is required.');
+          if (!email.value.trim() || !/^\S+@\S+\.\S+$/.test(email.value)) errors.push('A valid email is required.');
+          if (!phone.value.trim() || !/^\d{8,}$/.test(phone.value.replace(/\D/g, ''))) errors.push('A valid phone number is required.');
+          const errorDiv = document.getElementById('form-errors');
+          if (errors.length > 0) {
+            e.preventDefault();
+            errorDiv.innerHTML = errors.map(e=>`<div role="alert">${e}</div>`).join('');
+            errorDiv.style.display = 'block';
+            errorDiv.focus && errorDiv.focus();
+            return false;
+          } else {
+            errorDiv.innerHTML = '';
+            errorDiv.style.display = 'none';
+          }
+        });
+      }
+      // Newsletter form accessibility and validation
+      const newsletterForm = document.getElementById('newsletter-form');
+      if (newsletterForm) {
+        newsletterForm.addEventListener('submit', function (e) {
+          const email = newsletterForm.querySelector('#newsletterEmail');
+          const msg = document.getElementById('newsletter-msg');
+          if (!email.value.trim() || !/^\S+@\S+\.\S+$/.test(email.value)) {
+            e.preventDefault();
+            msg.textContent = 'Please enter a valid email address.';
+            msg.style.display = 'block';
+            msg.style.color = '#b91c1c';
+            email.setAttribute('aria-invalid', 'true');
+            email.focus();
+            return false;
+          } else {
+            msg.textContent = '';
+            msg.style.display = 'none';
+            email.removeAttribute('aria-invalid');
+          }
+        });
+      }
+    });
       document.addEventListener('DOMContentLoaded', function () {
         // === Config ===
         const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbz_G9xVnD1XmWwCrusDpmZ3iq9V-HDvSdd6BfiXiclVhn7QD0EZJ3yWyHyufBJXHBc/exec"; // <-- put your Apps Script /exec URL here
