--- a/hidden.html
+++ b/hidden.html
@@ -59,6 +59,7 @@
                     <th>S.no</th>
                     <th>Name</th>
                     <th>Role Number </th>
+                    <th>Role</th>
                 </tr>
             </thead>
             <tbody>
@@ -66,16 +67,19 @@
                     <td>1.</td>
                     <td>Keshav Sahu</td>
                     <td>IPM05035</td>
+                    <td>Codesigned Experience and Contact Us Page,responsible for ideation, business value proposition building</td>
                 </tr>
                 <tr>
                     <td>2.</td>
                     <td>Ingle Nishant Gajanan</td>
                     <td>IPM05032</td>
+                    <td>Codesigned Form and About Us Page, also responsible for ideation, business value proposition building</td>
                 </tr>
                 <tr>
                     <td>3.</td>
                     <td>Aryan Sethia</td>
                     <td>IPM05015</td>
+                    <td>Designed Index, page and other important Requirements inlcuidng github, hidden webpage, part of ideation, and business development</td>
                 </tr>
         </table>
     </div>
@@ -251,6 +255,8 @@
             </tr>
         </tbody>
     </table>
+    <h2 style="background-color: #fdfefd;">Customer Testimonials</h2>
+        <p>Customer Testimonials have already been added inthe homepage and testimonials webpage.</p>
     <h2 style="background-color: #fdfefd;">Mobile Page Speed Insights</h2>
     <div style="text-align:center;">
           <img src="80.png" alt="Description" style="width: 1000px; height:auto;">
