--- a/contact.html
+++ b/contact.html
@@ -549,13 +549,13 @@
             <div class="contact-column">
                 <h2 class="contact-title">VOYA HQ</h2>
                 <div class="contact-section-title">Operational Address</div>
-                <div class="contact-info">VOYA Mystery Travel Operations<br>Block B, DLF Cyber City, Sector 25<br>Gurgaon, Haryana 122002, India</div>
+                <div class="contact-info">VOYA Mystery Travel Operations<br>B21, One Lodha Place<br>Mumbai, Maharashtra, India</div>
                 <div class="contact-section-title">Registered Office</div>
-                <div class="contact-info">Innovation Hub, Sector 18<br>Gurgaon, Haryana 122015, India</div>
+                <div class="contact-info">B-22 One Lodha Place<br>Mumbai, Maharashtra, India</div>
                 <div class="contact-section-title">Email</div>
                 <div class="contact-info"><a href="mailto:hello@voyaindia.com">hello@voyaindia.com</a></div>
                 <div class="contact-section-title">Phone Number</div>
-                <div class="contact-info">Tel: <a href="tel:+919876543210">+91 98765 43210</a></div>
+                <div class="contact-info">Tel: <a href="tel:+91 7014924412">+91 98765 43210</a></div>
             </div>
             <!-- Press & Media Inquiry -->
             <div class="contact-column">
@@ -563,11 +563,11 @@
                 <div class="contact-section-title">Media Contact</div>
                 <div class="contact-info">Priya Sharma<br>Head of Communications</div>
                 <div class="contact-section-title">WhatsApp</div>
-                <div class="contact-info"><a href="https://wa.me/919876543210">+91 98765 43210</a></div>
+                <div class="contact-info"><a href="https://wa.me/917014924412">+91 70149 24412</a></div>
                 <div class="contact-section-title">Email</div>
                 <div class="contact-info"><a href="mailto:media@voyaindia.com">media@voyaindia.com</a></div>
                 <div class="contact-section-title">Phone Number</div>
-                <div class="contact-info"><a href="tel:+919123456789">+91 91234 56789</a></div>
+                <div class="contact-info"><a href="tel:+917014924412">+91 7014924412</a></div>
                 <div class="contact-section-title">Download Press Kit</div>
                 <div class="contact-info"><a href="d4.docx" style="color: #00bcd4; text-decoration: underline;">Download Press Kit</a></div>
             </div>
