updated hidden web page

--- a/hidden.html
+++ b/hidden.html
@@ -185,6 +185,11 @@
         <hr>
         
     </div>
+    <h2 style="background-color: #fdfefd;">Philosophy behind the logo</h2>
+            <ul>
+                <li><strong>The logo/favicon is designed as a stylized compass, symbolizing exploration and the spirit of adventure that VOYA brings to every journey. The circular form represents unity and the endless possibilities of travel across India.</strong></li>
+                <li><strong>The use of blue and white in the logo reflects trust, clarity, and a sense of calm, aligning with VOYA’s promise of safe, transparent, and memorable mystery experiences. The minimal design ensures the logo is modern, memorable, and accessible for all users.</strong></li>
+            </ul>
     <h2 style="background-color: #fdfefd;">Key Stakeholders</h2>
     <table>
         <thead>
